--- a/blocks/marquee/marquee.css
+++ b/blocks/marquee/marquee.css
@@ -1,3 +1,8 @@
+.marquee-wrapper {
+  max-width: 100%;
+  padding: 0;
+}
+
 .marquee {
   overflow: hidden;
   background: var(--surface-color);
